--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 안드로이드 11이상 패키지명으로 외부 앱 실행 시 추가 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> <!-- 전원을 종료하고 켜도 이어서 실행되도록 -->
+
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,14 +17,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.GetTiming_App"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".view.activity.SettingActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activity.SelectActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.IntroActivity"
             android:exported="true"
-            android:theme="@style/Theme.GetTiming_App.SplashScreen" >
+            android:theme="@style/Theme.GetTiming_App.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +37,15 @@
         <activity
             android:name=".view.activity.MainActivity"
             android:exported="false" />
-    </application>
 
+        <service android:name=".sevice.PriceForgroundService"/>
+
+        <receiver android:name=".receiver.BootReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+    </application>
 </manifest>
