Chore: 버전 업데이트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 안드로이드 11이상 패키지명으로 외부 앱 실행 시 추가 -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> <!-- 전원을 종료하고 켜도 이어서 실행되도록 -->
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> <!-- 전원을 종료하고 켜도 이어서 실행되도록 -->
 
     <application
         android:name=".App"
@@ -38,14 +37,14 @@
             android:name=".view.activity.MainActivity"
             android:exported="false" />
 
-        <service android:name=".sevice.PriceForgroundService"/>
+        <service android:name=".sevice.PriceForegroundService" />
 
-        <receiver android:name=".receiver.BootReceiver"
+        <receiver
+            android:name=".receiver.BootReceiver"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
     </application>
 </manifest>
